[gd_scene load_steps=25 format=3 uid="uid://07vxcoid3gbe"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_qm5hc"]
[ext_resource type="Texture2D" uid="uid://crasdvyvfvleo" path="res://Assets/Sprites/Effects/Shadow/player_shadow.png" id="2_dboaa"]
[ext_resource type="Texture2D" uid="uid://d345maodo48k2" path="res://Assets/Sprites/MainCharacter/player.png" id="2_ppgkr"]
[ext_resource type="AudioStream" uid="uid://cmn8mhjjjosk3" path="res://Assets/Sounds/Player/Move_1.mp3" id="4_t68us"]
[ext_resource type="AudioStream" uid="uid://dfmjabqxyfvpo" path="res://Assets/Sounds/Player/Paint_1.mp3" id="5_yvj3u"]
[ext_resource type="AudioStream" uid="uid://qga7ub88ajmj" path="res://Assets/Sounds/Player/Player_death_1.mp3" id="6_axnm3"]

[sub_resource type="Curve" id="Curve_gqjbb"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_db8me"]
colors = PackedColorArray(0.197937, 0.197937, 0.197937, 0.623529, 0.544974, 0.544974, 0.544974, 0.156863)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_epmbx"]
size = Vector2(8, 13)

[sub_resource type="Animation" id="Animation_1dmad"]
resource_name = "attack_down"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 76, 77]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_create_attack"
}, {
"args": [],
"method": &"_change_to_idle"
}]
}

[sub_resource type="Animation" id="Animation_ymsh8"]
resource_name = "attack_left"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [54, 55, 56, 57, 58, 59]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_create_attack"
}, {
"args": [],
"method": &"_change_to_idle"
}]
}

[sub_resource type="Animation" id="Animation_h7fuj"]
resource_name = "attack_right"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_create_attack"
}, {
"args": [],
"method": &"_change_to_idle"
}]
}

[sub_resource type="Animation" id="Animation_xd68n"]
resource_name = "attack_up"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [66, 67, 68, 69, 70, 71]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_create_attack"
}, {
"args": [],
"method": &"_change_to_idle"
}]
}

[sub_resource type="Animation" id="Animation_rvlou"]
resource_name = "death"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [78, 79, 80, 81, 82, 83]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"death"
}]
}

[sub_resource type="Animation" id="Animation_pi3jh"]
resource_name = "idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_ibdam"]
resource_name = "move_down"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_1qeuq"]
resource_name = "move_left"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_3t2pi"]
resource_name = "move_right"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_pwsy7"]
resource_name = "move_up"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_53v1d"]
resource_name = "paint_down"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_ulmaf"]
resource_name = "paint_left"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_nqo7d"]
resource_name = "paint_right"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53]
}

[sub_resource type="Animation" id="Animation_467qv"]
resource_name = "paint_up"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uhydf"]
_data = {
"attack_down": SubResource("Animation_1dmad"),
"attack_left": SubResource("Animation_ymsh8"),
"attack_right": SubResource("Animation_h7fuj"),
"attack_up": SubResource("Animation_xd68n"),
"death": SubResource("Animation_rvlou"),
"idle": SubResource("Animation_pi3jh"),
"move_down": SubResource("Animation_ibdam"),
"move_left": SubResource("Animation_1qeuq"),
"move_right": SubResource("Animation_3t2pi"),
"move_up": SubResource("Animation_pwsy7"),
"paint_down": SubResource("Animation_53v1d"),
"paint_left": SubResource("Animation_ulmaf"),
"paint_right": SubResource("Animation_nqo7d"),
"paint_up": SubResource("Animation_467qv")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 2
script = ExtResource("1_qm5hc")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 6
gravity = Vector2(0, 0)
scale_amount_min = 4.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_gqjbb")
color_ramp = SubResource("Gradient_db8me")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_epmbx")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 5)
texture = ExtResource("2_dboaa")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ppgkr")
hframes = 6
vframes = 14
frame = 78

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uhydf")
}
autoplay = "idle"

[node name="AudioPlayers" type="Node" parent="."]

[node name="AudioMove" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("4_t68us")

[node name="AudioPaint" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("5_yvj3u")

[node name="AudioDeath" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("6_axnm3")
volume_db = -10.0
